# AudioRecorder

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config
recorder_output/: index.html
src/: lib.rs  main.rs  math.rs  web_utils.rs
