[package]
name = "audio_recorder"
version = "0.1.0"
edition = "2021"
description = "A multiplatform audio recorder for rust and the web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []


[dependencies]
wasm-bindgen = { version = "0.2.78" }
js-sys = { version = "0.3.55" }
wasm-bindgen-futures = "0.4.28"
serde = { version = "*", features = ['derive'] }
bincode = "*"
serde_json = "*"
adhoc_audio = { version = "0.1.1" }
base64 = { version = "*" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlCollection',
  'HtmlInputElement',
  'HtmlFormElement',
  'FormData',
  'Node',
  'Window',
  'AudioContext',
  'BaseAudioContext',
  'AudioNode',
  'AudioBuffer',
  'Navigator',
  'MediaDevices',
  'MediaDeviceInfo',
  'MediaStream',
  'MediaStreamConstraints',
  'MediaStreamAudioSourceNode',
  'MediaStreamAudioDestinationNode',
  'ScriptProcessorNode',
  'AudioDestinationNode',
  'AudioProcessingEvent',
  'Worklet',
  'AudioWorklet',
  'WorkletOptions',
  'AudioWorkletNode',
  'AudioParamMap',
  'console',
  'Event',
  'MouseEvent',
  'FocusEvent',
  'XmlHttpRequest',
  'Location',
  'Blob',
  'BlobPropertyBag',
  'EndingTypes'
]
